# opening-hours

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md  bower.json  index.html  package.json
.github/workflows/: ci.yml
src/: app.rs  form.rs  location.rs  main.rs  node.rs  overpass.rs  param.rs  search.rs  state.rs  taginfo.rs
static/: index.html  manifest.json
static/css/: main.css
web/: index.html  manifest.webapp  opening-hours.manifest
web/css/: main.css
web/js/: app.js  controllers.js
web/js/config/: development.js
web/partials/: about.html  search.html
