[package]
name = "horaires"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"

[dependencies]
chrono = "0.4.37"
console_error_panic_hook = "0.1"
leaflet = "0.4"
leptos_router = "0.7"
log = "0.4"
opening-hours = "1.0"
wasm-logger = "0.2"

[dependencies.gloo]
default-features = false
version = "0.11"
features = ["storage"]

[dependencies.leptos]
version = "0.7"
features = ["csr"]

[dependencies.leptos-leaflet]
version = "0.9"
features = ["csr"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
